# laggyness

./: .gitignore  LICENSE  README.md  pyproject.toml
data/results/: collect_direct_vs_lazy.csv  collect_direct_vs_lazy_final.html  collect_direct_vs_lazy_initial.html  collect_direct_vs_lazy_second.html  collect_direct_vs_lazy_zoom1_final.html  collect_direct_vs_lazy_zoom1_first.html  collect_direct_vs_lazy_zoom1_second.html  collect_direct_vs_lazy_zoom2_final.html  collect_direct_vs_lazy_zoom2_first.html  collect_direct_vs_lazy_zoom2_second.html  lag_summary.html  mase_summary.html  selection_direct_vs_lazy.csv  selection_direct_vs_lazy_final.html  selection_direct_vs_lazy_final.json  selection_direct_vs_lazy_final_zoom1.html  selection_direct_vs_lazy_final_zoom1.json  selection_direct_vs_lazy_final_zoom2.html  selection_direct_vs_lazy_final_zoom2.json  selection_direct_vs_lazy_initial.html  selection_direct_vs_lazy_initial.json  selection_direct_vs_lazy_initial_zoom1.html  selection_direct_vs_lazy_initial_zoom1.json  selection_direct_vs_lazy_initial_zoom2.html  selection_direct_vs_lazy_initial_zoom2.json  (+2 more)
data_labeling/: common.py  sanity.py  sanity_classifiers.py  sanity_regimes.py  smooth_data.py  smooth_label_data.py
indicators/: calc_indicators.py  combine_inds_label.py  common.py  momentum.py  sanity.py  sanity_combined.py
laggyness/: common.py  direct_vs_lazy.py  lag_check.py  santy_check.py  shift_and_find_mins_vertical.py  smooth_data_vertical.py  summarize_alignment.py
training_data/: common.py  correl_test.py  random_forrest.py  trainsets.py
(+7 files in other folders)
