[project]
name = "laggyness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair[all]>=5.5.0",
    "numpy>=2.2.1",
    "polars-ols>=0.3.5",
    "polars>=1.18.0",
    "rich>=13.9.4",
    "patsy>=1.0.1",
    "matplotlib>=3.10.0",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "seaborn>=0.13.2",
    "polars-ds>=0.8.2",
    "scikit-learn>=1.6.1",
]
